chore(api): use http api instead of rest api